--- a/Show&HideApplicationApp/MacAppTutorial/Base.lproj/Main.storyboard
+++ b/Show&HideApplicationApp/MacAppTutorial/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11134" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11134"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="19529"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -673,7 +674,7 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider="target"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="MacAppTutorial" customModuleProvider="target"/>
                 <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -686,7 +687,7 @@
                     <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="196" y="240" width="480" height="270"/>
+                        <rect key="contentRect" x="196" y="240" width="480" height="260"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
                         <connections>
                             <outlet property="delegate" destination="B8D-0N-5wS" id="98r-iN-zZc"/>
@@ -698,15 +699,75 @@
                 </windowController>
                 <customObject id="Oky-zY-oP4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="250"/>
+            <point key="canvasLocation" x="75" y="245"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="MacAppTutorial" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="IKv-GM-TZW">
+                                <rect key="frame" x="191" y="224" width="99" height="16"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="FirstMacOSApp" id="jGP-Ax-tre">
+                                    <font key="font" usesAppearanceFont="YES"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vVz-u9-kWT">
+                                <rect key="frame" x="215" y="164" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="MXH-M5-W4i"/>
+                                    <constraint firstAttribute="width" constant="50" id="Nea-ZU-opN"/>
+                                </constraints>
+                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="Vector-2" id="JtN-iX-5qp"/>
+                            </imageView>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="d4l-8X-ssN">
+                                <rect key="frame" x="167" y="127" width="146" height="32"/>
+                                <buttonCell key="cell" type="push" title="Show Applications" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="kb1-eV-iK5">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="unhideAllApplications:" target="rPt-NT-nkU" id="gN3-dB-18y"/>
+                                </connections>
+                            </button>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2Xk-97-8t4">
+                                <rect key="frame" x="170" y="97" width="141" height="32"/>
+                                <buttonCell key="cell" type="push" title="Hide Applications" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="ovl-Gh-aRT">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="hideOtherApplications:" target="rPt-NT-nkU" id="gw4-Jn-VKm"/>
+                                </connections>
+                            </button>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oTN-vp-Dgh">
+                                <rect key="frame" x="210" y="62" width="60" height="32"/>
+                                <buttonCell key="cell" type="push" title="Quit" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Sij-Pw-rfv">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="terminate:" target="rPt-NT-nkU" id="DmH-vl-mBj"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="IKv-GM-TZW" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="6h1-E4-hSJ"/>
+                            <constraint firstItem="d4l-8X-ssN" firstAttribute="top" secondItem="vVz-u9-kWT" secondAttribute="bottom" constant="10" id="8lw-YU-C3I"/>
+                            <constraint firstItem="2Xk-97-8t4" firstAttribute="top" secondItem="d4l-8X-ssN" secondAttribute="bottom" constant="10" id="Cgb-0X-EWz"/>
+                            <constraint firstItem="oTN-vp-Dgh" firstAttribute="top" secondItem="2Xk-97-8t4" secondAttribute="bottom" constant="15" id="Obz-Dp-Ovp"/>
+                            <constraint firstItem="IKv-GM-TZW" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="30" id="fbA-f8-Ocw"/>
+                            <constraint firstItem="2Xk-97-8t4" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="i44-uT-L7T"/>
+                            <constraint firstItem="vVz-u9-kWT" firstAttribute="top" secondItem="IKv-GM-TZW" secondAttribute="bottom" constant="10" id="k17-mp-QJd"/>
+                            <constraint firstItem="oTN-vp-Dgh" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="mHj-dE-z9c"/>
+                            <constraint firstItem="vVz-u9-kWT" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="rZO-iB-GE7"/>
+                            <constraint firstItem="d4l-8X-ssN" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="sI2-Lg-Qkn"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
@@ -714,4 +775,7 @@
             <point key="canvasLocation" x="75" y="655"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Vector-2" width="52" height="53.5"/>
+    </resources>
 </document>
